changed command code system